--- a/src/core/client/CMakeLists.txt
+++ b/src/core/client/CMakeLists.txt
@@ -1,7 +1,12 @@
-set(SERVER_SOURCES
-    client-main.cpp
+set(CLIENT_INC_PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-add_library(sphy-2d-client STATIC ${SERVER_SOURCES})
+set(CLIENT_SOURCES
+    sphy-client.cpp
+)
+
+add_library(sphy-2d-client STATIC ${CLIENT_SOURCES})
+target_include_directories(sphy-2d-client PUBLIC ${CLIENT_INC_PUBLIC})
 target_link_libraries(sphy-2d-client PUBLIC helper)
 
