more work on the server-client communication

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ find_package(Boost REQUIRED COMPONENTS regex thread system chrono program_option
 add_subdirectory(thirdparty/yaml-cpp yaml-cpp)
 add_subdirectory(thirdparty/spdlog spdlog)
 add_subdirectory(thirdparty/concurrentqueue concurrentqueue)
+add_subdirectory(thirdparty/bitsery bitsery)
 add_subdirectory(src/common/helper helper)
+add_subdirectory(src/common/networking networking)
 add_subdirectory(src/core/server)
 add_subdirectory(src/core/client)
 add_subdirectory(test/test-server)
