--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "thirdparty/concurrentqueue"]
 	path = thirdparty/concurrentqueue
 	url = https://github.com/cameron314/concurrentqueue.git
+[submodule "thirdparty/bitsery"]
+	path = thirdparty/bitsery
+	url = https://github.com/fraillt/bitsery.git
