insanity inducing bgfx render stuff

--- a/src/core/client/CMakeLists.txt
+++ b/src/core/client/CMakeLists.txt
@@ -26,6 +26,7 @@ set(CLIENT_SOURCES
     model.cpp
     win/main-window.cpp
     render/render-engine.cpp
+    render/shader.cpp
     ui/rmlui-renderinterface.cpp
 )
 
@@ -54,7 +55,43 @@ set(LIBS_PRIV
     RmlUi::RmlUi
 )
 
+file(GLOB SHADER_SRC CONFIGURE_DEPENDS
+    "${CMAKE_SOURCE_DIR}/shader/**/fs_*.sc"
+    "${CMAKE_SOURCE_DIR}/shader/**/vs_*.sc"
+)
+
+set(SHADERC "${BGFX_BUILD}/bgfx/shaderc")
+set(SHADER_BIN_DIR ${CMAKE_SOURCE_DIR}/core-client/shader)
+set(SHADER_PROFILE spirv)
+foreach(SHADER ${SHADER_SRC})   
+    message(STATUS "Add shader compile target: ${SHADER}") 
+    get_filename_component(FILE_NAME ${SHADER} NAME_WE)
+    set(OUTPUT_FILE "${SHADER_BIN_DIR}/${FILE_NAME}.bin")
+    string(SUBSTRING ${FILE_NAME} 0 1 TYPE)
+    message(out file="${OUTPUT_FILE}")
+    add_custom_command(
+        OUTPUT ${OUTPUT_FILE}
+        COMMAND ${SHADERC}
+            -f ${SHADER}
+            -o ${OUTPUT_FILE}
+            --platform linux
+            --type ${TYPE}
+            --profile ${SHADER_PROFILE}
+            -i ${CMAKE_SOURCE_DIR}/thirdparty/bgfx/bgfx/src
+        DEPENDS ${SHADER}
+        COMMENT "Compiling shader ${FILE_NAME}"
+        VERBATIM
+    )
+
+    list(APPEND SHADER_BINARIES ${OUTPUT_FILE})
+endforeach()
+
+add_custom_target(shaders ALL
+    DEPENDS ${SHADER_BINARIES}
+)
+
 add_library(${LIB_NAME} STATIC ${CLIENT_SOURCES})
+add_dependencies(${LIB_NAME} shaders)
 target_compile_definitions(${LIB_NAME} PRIVATE BX_CONFIG_DEBUG=1)
 
 target_include_directories(${LIB_NAME} PUBLIC ${CLIENT_INC_PUBLIC})
