--- a/src/misc/helper/CMakeLists.txt
+++ b/src/misc/helper/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(THIRPARTY_DIR ${CMAKE_SOURCE_DIR}/thirdparty)
+set(THIRPARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../thirdparty)
 
 set(HELPER_INC_PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
