add proper texture and font loading
add system interface to rmlui

--- a/src/core/client/CMakeLists.txt
+++ b/src/core/client/CMakeLists.txt
@@ -32,6 +32,7 @@ set(CLIENT_SOURCES
     render/texture.cpp
     render/shader.cpp
     ui/rmlui-renderinterface.cpp
+    ui/rmlui-systeminterface.cpp
     ui/user-interface.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../mod/mod-manager.cpp
 )
