implement ecs and yaml game asset loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ endif()
 add_subdirectory(thirdparty/rmlui)
 add_subdirectory(thirdparty/rectpack2D)
 add_subdirectory(thirdparty/sol2)
+add_subdirectory(thirdparty/entt)
 add_subdirectory(src/misc/helper helper)
 add_subdirectory(src/misc/networking networking)
 add_subdirectory(src/core/server)
